refactor: migrate Arrays.asList and Collections.singleton to Java 9+ factory methods
Motivation:
Java 9+ provides List.of() and Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of() across 8 files.
Replace Collections.singleton() with Set.of() in MetadataClientTest.
Update imports accordingly.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization